Revision history for File::DataClass

         - Exposed more resultset methods
         - Added support for passwd and group files

0.1.146  2009-11-04
         - Passes tests

0.1.47   2009-10-16
         - Started this log